--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "preact-render-to-string",
-  "amdName": "preactRenderToString",
-  "version": "4.1.0",
+  "name": "@jabong/preact-render-to-string",
+  "amdName": "@jabong/preactRenderToString",
+  "version": "4.1.1",
   "description": "Render JSX to an HTML string, with support for Preact components.",
   "main": "dist/index.js",
   "umd:main": "dist/index.js",
